Server_Deployment/iptables_ipv6_rules
*filter

# NOTE: This was copied with slight modifications from the below URL
# https://www.linux.com/topic/networking/iptables-rules-ipv6/

# Flush all rules and delete all chains
# for a clean startup
-F
-X

# Zero out all counters
-Z

# Default policies: deny all incoming
# Unrestricted outgoing

-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

# Must allow loopback interface
-A INPUT -i lo -j ACCEPT

# Reject connection attempts not initiated from the host
-A INPUT -p tcp --syn -j DROP

# Allow return connections initiated from the host
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Accept all ICMP v6 packets (FYI ipv6-icmp and icmpv6 are aliases)
-A INPUT -p ipv6-icmp -j ACCEPT

# Optional rules to allow other LAN hosts access
# to services. Delete $ipt6 -A INPUT -p tcp --syn -j DROP

# Allow DHCPv6 from LAN only
-A INPUT -m state --state NEW -m udp -p udp -s fe80::/10 --dport 546 -j ACCEPT

# Allow connections from SSH clients
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

# Allow HTTP and HTTPS traffic
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT

# Allow access to SMTP, POP3, and IMAP
-A INPUT -m state --state NEW -p tcp -m multiport --dport 25,110,143 -j ACCEPT


COMMIT
